--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         require(["esri/map", "modules/geocoderButton"], function(Map, geocoderButton){
 
-            var myMap = new esri.Map("map", {
+            var myMap = new Map("map", {
                 center: [-56.049, 38.485],
                 zoom: 3,
                 basemap: "streets"
