--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Geocoder Button Dijit</title>
     <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.6/js/esri/css/esri.css">
     <link rel="stylesheet" type="text/css" href="http://js.arcgis.com/3.6/js/dojo/dijit/themes/claro/claro.css">
-    <link rel="stylesheet" type="text/css" href="css/geocoderButton.css">
+    <link rel="stylesheet" type="text/css" href="css/GeocoderButton.css">
     <style type="text/css">
     body{
             margin:40px;
@@ -24,7 +24,7 @@
             height: 500px;
             position: relative;
         }
-        #geocoderButton{
+        #GeocoderButton{
             position: absolute;
             top:20px;
             left: 65px;
@@ -35,7 +35,7 @@
 <body class="claro">
     <div class="container">
         <div id="map" class="map">
-            <div id="geocoderButton"></div>
+            <div id="GeocoderButton"></div>
         </div>
     </div>
     <script type="text/javascript">
@@ -56,7 +56,7 @@
     <script src="http://js.arcgis.com/3.6/" type="text/javascript"></script>
     <script type="text/javascript">
 
-        require(["esri/map", "modules/geocoderButton"], function(Map, geocoderButton){
+        require(["esri/map", "modules/GeocoderButton"], function(Map, GeocoderButton){
 
             var myMap = new Map("map", {
                 center: [-56.049, 38.485],
@@ -66,9 +66,9 @@
 
             
 
-            myWidget = new geocoderButton({
+            myWidget = new GeocoderButton({
                 map: myMap,
-            }, "geocoderButton");
+            }, "GeocoderButton");
             myWidget.startup();
 
             
