--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             packages: [
                 {
                     name: "modules",
-                    location: locationPath + '/js/'
+                    location: locationPath + 'js/'
                 }
             ]
         };
