--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
             packages: [
                 {
                     name: "modules",
-                    location: locationPath + 'js/'
+                    location: locationPath + '/js/'
+                },
+                {
+                    name: "zesri",
+                    location: locationPath + '/js/'
                 }
             ]
         };
