--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
             // The locationPath logic below may look confusing but all its doing is 
             // enabling us to load the api from a CDN and load local modules from the correct location.
             packages: [{
-                name: "modules",
-                location: package_path + '/js'
-            }, {
-                name: "zesri",
+                name: "application",
                 location: package_path + '/js'
             }]
         };
@@ -55,7 +52,7 @@
     <script src="http://js.arcgis.com/3.6/" type="text/javascript"></script>
     <script type="text/javascript">
 
-        require(["esri/map", "modules/GeocoderButton"], function(Map, GeocoderButton){
+        require(["esri/map", "application/GeocoderButton"], function(Map, GeocoderButton){
 
             var myMap = new Map("map", {
                 center: [-56.049, 38.485],
